--- a/apps/examples/material/src/styles.scss
+++ b/apps/examples/material/src/styles.scss
@@ -7,7 +7,7 @@
 $my-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
 $my-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
-$my-theme: mat.m2-define-light-theme(
+$my-light-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $my-primary,
@@ -18,7 +18,21 @@ $my-theme: mat.m2-define-light-theme(
   )
 );
 
-@include mat.all-component-themes($my-theme);
+$my-dark-theme: mat.m2-define-dark-theme(
+  (
+    color: (
+      primary: $my-primary,
+      accent: $my-accent,
+    ),
+  )
+);
+
+@include mat.all-component-themes($my-light-theme);
+
+.dark,
+:root.dark {
+  @include mat.all-component-colors($my-dark-theme);
+}
 
 * {
   margin: 0;
